--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ button{
     width: 70px;
     height: 30px;
 }
+.display{
+   margin: 80px;
+}
 
 .container{
     width: 90px;
@@ -27,4 +30,8 @@ button{
 }
 .hide{
     display: none;
+}
+.bottone{
+    font-size: 20px;
+    margin: 80px;
 }
